# Work-training

./: README.md
Exercises/Chapter 2/Ex.1/Ex.1/: .gitignore
Exercises/Chapter 2/Ex.1/Ex.1/Ex.1/: CMakeLists.txt  Ex.1.cpp
Exercises/Chapter 2/Ex.10/Ex.10/Ex.10/: CMakeLists.txt  Ex.10.cpp
Exercises/Chapter 2/Ex.2/Ex.2/Ex.2/: CMakeLists.txt  Ex.2.cpp
Exercises/Chapter 2/Ex.3/Ex.3/Ex.3/: CMakeLists.txt  Ex.3.cpp  input.txt
Exercises/Chapter 2/Ex.4/Ex.4/Ex.4/: CMakeLists.txt  Ex.4.cpp  input.txt
Exercises/Chapter 2/Ex.5/Ex5/Ex5/: CMakeLists.txt  Ex5.cpp
Exercises/Chapter 2/Ex.6/Ex.6/Ex.6/: CMakeLists.txt  Ex.6.cpp  input.txt
Exercises/Chapter 2/Ex.7/Ex.7/Ex.7/: CMakeLists.txt  Ex.7.cpp  input.txt
Exercises/Chapter 2/Ex.8/Ex.8/Ex.8/: CMakeLists.txt  Ex.8.cpp
Exercises/Chapter 2/Ex.9/Ex.9/Ex.9/: CMakeLists.txt  Ex.9.cpp
Task 1/: CMakeLists.txt  README.md  Task_1.cpp
Task 1/inc/: Employes.hpp  Staff.hpp
Task 1/src/: Employes.cpp  Staff.cpp
